# quantum-gpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: copypasta_archive.txt  paradiselost.txt
input.txt/: config.json  events.out.tfevents.1767438843.jorjor-well.14728.0
src/: config.py  dataset.py  inference.py  model.py  quantum_layers.py  tokenizer.py  training.py
src/config/: base.py  big.py  default.py  fast.py  heavy.py  light.py
