[project]
name = "quantum-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pennylane>=0.43.1",
    "pennylane-lightning-gpu>=0.43.0",
    "pre-commit>=4.5.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]
